# orbits

./: CMakeLists.txt  README.md  imgui.ini
include/: camera.h  celestialBody.h  model.h  shader.h  simulation.h  universe.h
models/celestialBody/: celestialbody.mtl
src/: main.cpp
